--- a/cli/agents/ocr_lab_test_result/pyproject.toml
+++ b/cli/agents/ocr_lab_test_result/pyproject.toml
@@ -10,4 +10,8 @@ dependencies = [
     "pydantic==2.11.1",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "pdf2image>=1.17.0",
+    "pytesseract>=0.3.13",
+    "Pillow>=11.1.0",
+    "python-dotenv>=1.1.0",
 ]   
