--- a/cli/agents/get_image_and_upload_mcp/pyproject.toml
+++ b/cli/agents/get_image_and_upload_mcp/pyproject.toml
@@ -10,5 +10,5 @@ dependencies = [
     "pydantic==2.11.1",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
-    "fastmcp"
+    "fastmcp>=0.1.0"
 ]
